# OPENGL

./: CMakeLists.txt  README.md  thunderGen.sh  thunder_vrai.py
src/: Node.cpp  Node.hh  PoggerGL.cpp  PoggerGL.h  main.cpp  shaderProgram.cpp  shaderProgram.hh  thunder.cpp  thunder.hh
src/shaders/: blurringFragmentShader.fsh  blurringVertexShader.vsh  mergeFragmentShader.fsh  splitFragmentShader.fsh  splitVertexShader.vsh
tests/: test  test1  test2  test3  test4  test5  test6  test7  test8  test9
